@@ -88,7 +88,7 @@ SV *newSVn (int len)
 {
   SV *sv = newSVpv ("", 0);
   
-  SvUPGRADE (sv, SVt_PV);
+  (void) SvUPGRADE (sv, SVt_PV);
   SvGROW (sv, len);
   SvCUR_set (sv, len);
   
@@ -145,7 +145,6 @@ GTile *old_tile (SV *sv)
 GPixelRgn *old_pixelrgn (SV *sv)
 {
   STRLEN dc;
-  dTHR;
   
   if (!sv_derived_from (sv, PKG_PIXELRGN) && !SvTYPE (sv) != SVt_PVHV)
     croak ("argument is not of type " PKG_PIXELRGN);
@@ -173,12 +172,16 @@ trace_init ()
 
 #if __STDC_VERSION__ > 199900
 #define trace_printf(...) \
-	if (trace_file) PerlIO_printf (trace_file, __VA_ARGS__); \
-	else		sv_catpvf (trace_var, __VA_ARGS__)
+	do { \
+        	if (trace_file) PerlIO_printf (trace_file, __VA_ARGS__); \
+		else		sv_catpvf (trace_var, __VA_ARGS__); \
+        } while(0)
 #elif __GNUC__
 #define trace_printf(frmt,args...) \
-	if (trace_file) PerlIO_printf (trace_file, frmt, ## args); \
-	else		sv_catpvf (trace_var, frmt, ## args)
+        do { \
+		if (trace_file) PerlIO_printf (trace_file, frmt, ## args); \
+		else		sv_catpvf (trace_var, frmt, ## args); \
+        } while(0)
 #elif defined(__STDC__)
 
 /* sigh */
@@ -301,10 +304,12 @@ dump_params (int nparams, GParam *args, GParamDef *params)
   for (i = 0; i < nparams; i++)
     {
       if ((trace & TRACE_TYPE) == TRACE_TYPE)
-	if (params[i].type >= 0 && params[i].type < PARAM_END+1)
-	  trace_printf ("%s ", ptype[params[i].type]);
-	else
-	  trace_printf ("T%d ", params[i].type);
+        {
+	  if (params[i].type >= 0 && params[i].type < PARAM_END+1)
+	    trace_printf ("%s ", ptype[params[i].type]);
+	  else
+	    trace_printf ("T%d ", params[i].type);
+        }
       
       if ((trace & TRACE_NAME) == TRACE_NAME)
 	trace_printf ("%s=", params[i].name);
@@ -387,7 +392,6 @@ convert_array2paramdef (AV *av, GParamDef **res)
   STRLEN dc;
   int count = 0;
   GParamDef *def = 0;
-  dTHR;
   
   if (av_len (av) >= 0)
     for(;;)
@@ -567,9 +571,7 @@ canonicalize_colour (char *err, SV *sv, GParamColor *c)
 /* check for common typoes.  */
 static void check_for_typoe (char *croak_str, char *p)
 {
-  STRLEN dc;
   char b[80];
-  dTHR;
 
   g_snprintf (b, sizeof b, "%s_MODE", p);	if (perl_get_cv (b, 0)) goto gotit;
   g_snprintf (b, sizeof b, "%s_MASK", p);	if (perl_get_cv (b, 0)) goto gotit;
@@ -589,16 +591,14 @@ gotit:
    string constants here, and check for common typoes. */
 static int check_int (char *croak_str, SV *sv)
 {
-  dTHR;
-
   if (SvTYPE (sv) == SVt_PV && !SvIOKp(sv))
     {
       STRLEN dc;
       char *p = SvPV (sv, dc);
 
       if (*p
-          && *p != '0' && *p != '1' & *p != '2' && *p != '3' && *p != '4'
-          && *p != '5' && *p != '6' & *p != '7' && *p != '8' && *p != '9')
+          && *p != '0' && *p != '1' && *p != '2' && *p != '3' && *p != '4'
+          && *p != '5' && *p != '6' && *p != '7' && *p != '8' && *p != '9')
         {
           sprintf (croak_str, "Expected an INT32 but got '%s'. Add '*1' if you really intend to pass in a string", p);
           check_for_typoe (croak_str, p);
@@ -621,7 +621,7 @@ static int check_int (char *croak_str, SV *sv)
   if (as_ref)							\
     av = newAV ();						\
   else								\
-    EXTEND (SP, arg[-1].data.d_int32);				\
+    av = 0, EXTEND (SP, arg[-1].data.d_int32);			\
   for (j = 0; j < arg[-1].data.d_int32; j++)			\
     if (as_ref)							\
       av_push (av, newsv (arg->data.datatype[j]));		\
@@ -629,14 +629,13 @@ static int check_int (char *croak_str, SV *sv)
       PUSHs (sv_2mortal (newsv (arg->data.datatype[j])));	\
   if (as_ref)							\
     PUSHs (sv_2mortal (newRV_noinc ((SV *)av)));		\
-  sv = 0;							\
 }
 
 void
 push_gimp_sv (GParam *arg, int array_as_ref)
 {
-  SV *sv;
   dSP;
+  SV *sv = 0;
   
   switch (arg->type)
     {
@@ -696,8 +695,6 @@ push_gimp_sv (GParam *arg, int array_as_ref)
 	
       default:
 	croak ("dunno how to return param type %d", arg->type);
-/*        sv = newSV ();*/
-/*        abort ();*/
     }
   
   if (sv)
@@ -739,7 +736,6 @@ static int
 convert_sv2gimp (char *croak_str, GParam *arg, SV *sv)
 {
   STRLEN dc;
-  dTHR;
   
   switch (arg->type)
     {
@@ -967,7 +963,7 @@ static void pii_run(char *name, int nparams, GParam *param, int *xnreturn_vals, 
       
       if (count == 1 && !SvOK (TOPs))
 	{
-	  POPs;
+	  (void) POPs;
 	  count = 0;
 	}
       
@@ -1004,7 +1000,7 @@ static void pii_run(char *name, int nparams, GParam *param, int *xnreturn_vals, 
 	           && convert_sv2gimp (errmsg, &return_vals[i], TOPs))
 	         {
 	           --count;
-	           POPs;
+	           (void) POPs;
 	         }
 	       
 	       if (errmsg [0])
@@ -1019,7 +1015,7 @@ static void pii_run(char *name, int nparams, GParam *param, int *xnreturn_vals, 
 	}
       
       while (count--)
-	POPs;
+	(void) POPs;
       
       destroy_paramdefs (return_defs, nreturn_vals);
       
@@ -1088,7 +1084,7 @@ set_trace (var)
 		        trace_file = 0;
 		        sv = SvRV (sv);
 		        SvREFCNT_inc (sv);
-		        SvUPGRADE (sv, SVt_PV);
+		        (void) SvUPGRADE (sv, SVt_PV);
 		        trace_var = sv;
 		      }
 		  }
@@ -1228,12 +1224,12 @@ gimp_call_procedure (proc_name, ...)
 		int proc_type;
 		int nparams;
 		int nreturn_vals;
-		int i, j;
 		GParam *args = 0;
 		GParam *values = 0;
 		int nvalues;
 		GParamDef *params;
 		GParamDef *return_vals;
+                int i=0, j=0; /* work around bogus warning.  */
 		
 		if (trace)
 		  trace_init ();
@@ -1428,7 +1424,6 @@ gimp_set_data(id, data)
 	CODE:
 	{
 		STRLEN dlen;
-		STRLEN len;
 		STRLEN dc;
 		void *dta;
 		
@@ -1444,7 +1439,6 @@ gimp_get_data(id)
 	{
 		SV *data;
 		STRLEN dlen;
-		STRLEN len;
 		STRLEN dc;
 		
 		dlen = get_data_size (SvPV (id, dc));
