@@ -26,6 +26,7 @@ AM_PATH_GIMP(1.0.2,, AC_MSG_ERROR(
 ac_gimp_save_CPPFLAGS="$CPPFLAGS"
 CPPFLAGS="$CPPFLAGS $GIMP_CFLAGS"
 AC_EGREP_CPP(DIVIDE_MODE,[#include <libgimp/gimp.h>],AC_DEFINE(HAVE_DIVIDE_MODE))
+AC_CHECK_HEADERS(libgimp/gimpmodule.h)
 CPPFLAGS="$ac_gimp_save_CPPFLAGS"
 
 AC_CHECK_HEADERS(unistd.h)
