@@ -3,7 +3,6 @@ use ExtUtils::MakeMaker;
 chomp ($_gccflags = qx<glib-config --cflags glib gmodule>);
 chomp ($_gldflags = qx<glib-config --libs glib gmodule>);
 
-$topdir="..";
 do '../config.pl';
 
 sub MY::postamble {
@@ -16,8 +15,8 @@ EOF
 WriteMakefile(
     'NAME'	=> 'Gimp::Module',
     'VERSION_FROM' => '../Gimp.pm',
-    'INC'	=> "$_gccflags $CPPFLAGS -I.. $CFLAGS $DEFS".($IN_GIMP ? " -DIN_GIMP" : ""),
+    'INC'	=> "$INC1 $GIMP_INC_NOUI $_gccflags $CPPFLAGS $CFLAGS",
     'macro'	=> \%cfg,
-    'DEFINE'	=> '',
+    'DEFINE'	=> "$DEFINE1 $DEFS",
     dynamic_lib	=> { OTHERLDFLAGS => "$LDFLAGS $LIBS $_gldflags" },
 );
